Qualify the names of extended types in module interfaces

This was previously done inconsistently—we did it for certain generic types, but not otherwise. Now we always do it unless `-module-interface-preserve-types-as-written` has been specified. Fixes SR-13050 / rdar://64947446.