test/SourceKit/CodeComplete/complete_swiftinterface.swift
@@ -3,7 +3,8 @@
 
 // 1) Build .swiftinterface files for MyPoint and MyExtensions, using a non-default module cache path
 // RUN: %target-swift-frontend -emit-module-interface-path %t/MyPoint.swiftinterface -module-name MyPoint -emit-module -o /dev/null %S/Inputs/parseable-interface/MyPoint.swift
-// RUN: %target-swift-frontend -emit-module-interface-path %t/MyPointExtensions.swiftinterface -module-name MyPointExtensions -emit-module -o /dev/null -module-cache-path %t/modulecache -I %t %S/Inputs/parseable-interface/MyPointExtensions.swift
+// FIXME: Since we're extending MyPoint.MyPoint, we need -module-interface-preserve-types-as-written
+// RUN: %target-swift-frontend -emit-module-interface-path %t/MyPointExtensions.swiftinterface  -module-interface-preserve-types-as-written -module-name MyPointExtensions -emit-module -o /dev/null -module-cache-path %t/modulecache -I %t %S/Inputs/parseable-interface/MyPointExtensions.swift
 // RUN: %empty-directory(%t/modulecache)
 
 // 2) Check completion using the default (cold) module cache
